# cppproj

./: CMakeLists.txt  README.md  lib.cc  main.cc
include/: lib.h
