CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(myproject)

# DEPENDENCIES
FIND_PACKAGE(Boost 1.36.0 COMPONENTS unit_test_framework date_time filesystem system)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF()


# SOURCES
SET(SRC main.cc)

SET(LIB_SRC lib.cc)

SET(TEST_SRC test.cc)

INCLUDE_DIRECTORIES(include)


# BINARIES
ADD_LIBRARY(${PROJECT_NAME}_lib ${LIB_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_lib LINK_PUBLIC ${Boost_LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECT_NAME}_lib PROPERTIES PUBLIC_HEADER "include/lib.h")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} ${PROJECT_NAME}_lib)


# TESTS BINARIES
ENABLE_TESTING()
ADD_EXECUTABLE(${PROJECT_NAME}_test ${TEST_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_test LINK_PUBLIC ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})

ADD_TEST(NAME test COMMAND ${PROJECT_NAME}_test)


# INSTALLATION
INSTALL(TARGETS ${PROJECT_NAME}_lib
  ARCHIVE DESTINATION lib
  PUBLIC_HEADER DESTINATION include)
INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)


# PACKAGE
SET(MAJOR_VERSION 1)
SET(MINOR_VERSION 0)
SET(PATCH_VERSION 0)
SET(CPACK_SET_DESTDIR "on")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_DESCRIPTION "description")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "description summary")
SET(CPACK_PACKAGE_VENDOR "vendor")
SET(CPACK_PACKAGE_CONTACT "vendor@gmail.com")
SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")

#SET(CPACK_DEBIAN_PACKAGE_DEPENDS "kate, plasma-desktop, libc6(>= 2.1.3)")

INCLUDE(CPack)
